--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   {
     "id": "carpentier-alejo",
     "title": "Alejo Carpentier — Constelación",
-    "file": "carpentier_constelacion.html",
+    "file": "carpentier/carpentier_constelacion.html",
     "date": "",
     "tags": [
       "A fondo",
