--- a/manifest.json
+++ b/manifest.json
@@ -225,7 +225,7 @@
     "file": "skarmeta/skarmeta_constelacion.html",
     "date": "",
     "tags": [
-      "Perú",
+      "Chile",
       "11/02/1979"
     ],
     "thumb": "img/skarmeta_redondo.png"
@@ -236,7 +236,7 @@
     "file": "uslarpietri/uslarpietri_constelacion.html",
     "date": "",
     "tags": [
-      "Perú",
+      "Venezuela",
       "12/10/1977"
     ],
     "thumb": "img/uslarpietri_redondo.png"
