--- a/manifest.json
+++ b/manifest.json
@@ -232,7 +232,7 @@
   },
   {
     "id": "uslarpietri-arturo",
-    "title": "Arturo Ulsar Pietri — Constelación",
+    "title": "Arturo Uslar Pietri — Constelación",
     "file": "uslarpietri/uslarpietri_constelacion.html",
     "date": "",
     "tags": [
